<resources>
    <string name="app_name">MarvelMania</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="load_more">Load more</string>
    <string name="iron_man">IRON MAN</string>

    <string name="popular_comics_home">Popular Comics with the <b>%s</b></string>


    <!-- Menu -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="main_categories">Main Categories</string>
    <string name="nav_comics">Comics</string>
    <string name="nav_events">Events</string>
    <string name="nav_stories">Stories</string>
    <string name="exit_the_app">Exit the app</string>
    <string name="logout">Log Out</string>
    <string name="comic_empty_description">There is no comic description available.</string>
    <string name="popular_marvel_comics">Popular Marvel Comics</string>
    <string name="popular_marvel_events">Popular Marvel Events</string>
    <string name="popular_marvel_heroes">Popular Marvel Heroes</string>
    <string name="app_desc">An application that consumes data <br> from the Marvel API </br></string>
    <string name="dont_have_account">Don\'t have an account? <b>Sign up</b></string>

    <string name="wrong_email">Your email seems to be incorrect</string>
    <string name="wrong_password">Your password seems to be incorrect</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="pass_conf_hint">Confirm password</string>
    <string name="create_account_btn_text">Create Account</string>
    <string name="reset_my_account">Reset my Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass_desc">Enter your e-mail bellow and we will send you a reset code</string>
    <string name="profile_dummy_email">stathis.email@domain.com</string>
    <string name="profile_dummy_username">stathis.kar</string>

</resources>