<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:padding="@dimen/margin_16"
    tools:context=".features.login.LoginActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="@dimen/image_150"
        android:layout_height="@dimen/dimen_70"
        android:layout_marginTop="@dimen/dimen_30"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/marvel_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_app_name"
        style="@style/marvel_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:backgroundTint="@color/marvel_red"
        android:hint="@string/e_mail_hint"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/login_app_name" />

    <EditText
        android:id="@+id/pass_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:backgroundTint="@color/marvel_red"
        android:hint="@string/pass_hint"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textColorHint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/email_input_field" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_56"
        android:layout_marginTop="@dimen/dimen_30"
        android:backgroundTint="@color/marvel_red"
        android:text="@string/login_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_input_field" />

    <TextView
        android:id="@+id/forgot_password"
        style="@style/marvel_login_h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/register_btn"
        style="@style/marvel_login_h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>