<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:padding="@dimen/margin_16"
    tools:context=".features.forgotPassword.ForgotPasswordActivity">


    <ImageView
        android:id="@+id/register_img"
        android:layout_width="@dimen/image_150"
        android:layout_height="@dimen/dimen_70"
        android:layout_marginTop="@dimen/dimen_50"
        android:contentDescription="@string/app_name"
        android:src="@drawable/marvel_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/forgot_password_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/forgot_password_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_desc"
        android:textColor="@color/white"
        android:padding="@dimen/margin_16"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toTopOf="@id/emailField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20"
        android:hint="@string/e_mail_hint"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pass_btn"
        app:layout_constraintTop_toBottomOf="@id/register_img"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgot_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_56"
        android:layout_marginBottom="@dimen/padding_20"
        android:text="@string/reset_my_account"
        android:backgroundTint="@color/marvel_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>